--- a/about.html
+++ b/about.html
@@ -10,7 +10,6 @@
     <title>About Yuliia Korotchenko and contact me</title>
   </head>
   <body>
-
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container">
         <a class="navbar-brand" href="/index.html" title="Homepage">Yuliia Korotchenko</a>
@@ -36,14 +35,13 @@
     <h3>I am from Ukraine, but now I am in UK</h3>
     <div class="city text-center">
     <p>
-        Zaporizhzhia (IPA: [zɐpoˈr⁽ʲ⁾iʒːɐ] is a city in south-eastern Ukraine, 
+        Zaporizhzhia is a city in south-eastern Ukraine, 
         situated on the banks of the Dnieper river. It is the administrative centre 
         of the Zaporizhzhia Oblast (region). Zaporizhzhia has a population 
         of 710,052 as of 1 January 2022. Zaporizhzhia (lit. Below-The-Rapids) is 
         known for the historic island of Khortytsia; multiple power stations including 
         Zaporizhzhia Nuclear Power</p>        
     </div>
-
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
@@ -57,7 +55,6 @@
         </div>
       </div>
     </div>
-
     <div id="contactMe" class="mt-5">
         <h2> ✉️ Contact me</h2>
         <a href="mailto:hbnjhbnm@gmail.com" title="Contact Yuliia Korotchenko" class="email"> hbnjhbnm@gmail.com </a>
