--- a/index.html
+++ b/index.html
@@ -4,14 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>homework</title>
+    <title>Portfolio</title>
     <link href="/css/style.css" rel="stylesheet" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    />
+      crossorigin="anonymous"/>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
@@ -24,16 +23,14 @@
           data-bs-target="#navbarNav"
           aria-controls="navbarNav"
           aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+          aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="/index.html" title="Homepage"
-                >Home</a
-              >
+                >Home</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/about.html" title="About Yuliia Korotchenko">About me</a>
@@ -78,8 +75,7 @@
             <a
               href="https://majestic-peony-946643.netlify.app"
               class="primary-link" title="Launch Weather App"
-              >Launch Weather App</a
-            >
+              >Launch Weather App</a>
           </div>
         </div>
         <div class="col-md-6">
